--- a/merkle_light/merkle/fn.next_pow2.html
+++ b/merkle_light/merkle/fn.next_pow2.html
@@ -48,12 +48,12 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a class='srclink' href='../../src/merkle_light/merkle.rs.html#223-232' title='goto source code'>[src]</a></span></h1>
-<pre class='rust fn'>pub fn next_pow2(n: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a>) -&gt; <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a></pre><div class='docblock'><p>next_pow2 returns next highest power of two from a given number if
+               </span><a class='srclink' href='../../src/merkle_light/merkle.rs.html#230-239' title='goto source code'>[src]</a></span></h1>
+<pre class='rust fn'>pub fn next_pow2(n: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a>) -&gt; <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.usize.html">usize</a></pre><div class='docblock'><p><code>next_pow2</code> returns next highest power of two from a given number if
 it is not already a power of two.</p>
 
-<p><a href="http://locklessinc.com/articles/next_pow2/">http://locklessinc.com/articles/next_pow2/</a>
-<a href="https://stackoverflow.com/questions/466204/rounding-up-to-next-power-of-2/466242#466242">https://stackoverflow.com/questions/466204/rounding-up-to-next-power-of-2/466242#466242</a></p>
+<p><a href="http://locklessinc.com/articles/next_pow2/"></a>
+<a href="https://stackoverflow.com/questions/466204/rounding-up-to-next-power-of-2/466242#466242"></a></p>
 </div></section>
     <section id='search' class="content hidden"></section>
 
@@ -71,13 +71,15 @@ it is not already a power of two.</p>
                     <dd>Show this help dialog</dd>
                     <dt>S</dt>
                     <dd>Focus the search field</dd>
-                    <dt>&larrb;</dt>
+                    <dt>↑</dt>
                     <dd>Move up in search results</dd>
-                    <dt>&rarrb;</dt>
+                    <dt>↓</dt>
                     <dd>Move down in search results</dd>
+                    <dt>↹</dt>
+                    <dd>Switch tab</dd>
                     <dt>&#9166;</dt>
                     <dd>Go to active search result</dd>
-                    <dt>+</dt>
+                    <dt style="width:31px;">+ / -</dt>
                     <dd>Collapse/expand all sections</dd>
                 </dl>
             </div>
