--- a/merkle_light/merkle/index.html
+++ b/merkle_light/merkle/index.html
@@ -48,7 +48,7 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a class='srclink' href='../../src/merkle_light/merkle.rs.html#1-237' title='goto source code'>[src]</a></span></h1>
+               </span><a class='srclink' href='../../src/merkle_light/merkle.rs.html#1-244' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>Merkle tree abstractions, implementation and algorithms.</p>
 </div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
@@ -71,7 +71,7 @@
                            <td><a class="fn" href="fn.next_pow2.html"
                                   title='fn merkle_light::merkle::next_pow2'>next_pow2</a></td>
                            <td class='docblock-short'>
-                                <p>next_pow2 returns next highest power of two from a given number if
+                                <p><code>next_pow2</code> returns next highest power of two from a given number if
 it is not already a power of two.</p>
                            </td>
                        </tr></table></section>
@@ -91,13 +91,15 @@ it is not already a power of two.</p>
                     <dd>Show this help dialog</dd>
                     <dt>S</dt>
                     <dd>Focus the search field</dd>
-                    <dt>&larrb;</dt>
+                    <dt>↑</dt>
                     <dd>Move up in search results</dd>
-                    <dt>&rarrb;</dt>
+                    <dt>↓</dt>
                     <dd>Move down in search results</dd>
+                    <dt>↹</dt>
+                    <dd>Switch tab</dd>
                     <dt>&#9166;</dt>
                     <dd>Go to active search result</dd>
-                    <dt>+</dt>
+                    <dt style="width:31px;">+ / -</dt>
                     <dd>Collapse/expand all sections</dd>
                 </dl>
             </div>
