--- a/merkle_light/hash/index.html
+++ b/merkle_light/hash/index.html
@@ -48,7 +48,7 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a class='srclink' href='../../src/merkle_light/hash.rs.html#1-146' title='goto source code'>[src]</a></span></h1>
+               </span><a class='srclink' href='../../src/merkle_light/hash.rs.html#1-144' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>Hash infrastructure for items in Merkle tree.
 Hash infrastructure for items in Merkle Tree.</p>
 </div><h2 id='traits' class='section-header'><a href="#traits">Traits</a></h2>
@@ -83,13 +83,15 @@ Hash infrastructure for items in Merkle Tree.</p>
                     <dd>Show this help dialog</dd>
                     <dt>S</dt>
                     <dd>Focus the search field</dd>
-                    <dt>&larrb;</dt>
+                    <dt>↑</dt>
                     <dd>Move up in search results</dd>
-                    <dt>&rarrb;</dt>
+                    <dt>↓</dt>
                     <dd>Move down in search results</dd>
+                    <dt>↹</dt>
+                    <dd>Switch tab</dd>
                     <dt>&#9166;</dt>
                     <dd>Go to active search result</dd>
-                    <dt>+</dt>
+                    <dt style="width:31px;">+ / -</dt>
                     <dd>Collapse/expand all sections</dd>
                 </dl>
             </div>
