--- a/merkle_light/hash/index.html
+++ b/merkle_light/hash/index.html
@@ -48,7 +48,7 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a class='srclink' href='../../src/merkle_light/hash.rs.html#1-144' title='goto source code'>[src]</a></span></h1>
+               </span><a class='srclink' href='../../src/merkle_light/hash.rs.html#1-140' title='goto source code'>[src]</a></span></h1>
 <div class='docblock'><p>Hash infrastructure for items in Merkle tree.
 Hash infrastructure for items in Merkle Tree.</p>
 </div><h2 id='traits' class='section-header'><a href="#traits">Traits</a></h2>
@@ -57,7 +57,8 @@ Hash infrastructure for items in Merkle Tree.</p>
                            <td><a class="trait" href="trait.Algorithm.html"
                                   title='trait merkle_light::hash::Algorithm'>Algorithm</a></td>
                            <td class='docblock-short'>
-                                <p>Hashing algorithm type.</p>
+                                <p>A trait for hashing an arbitrary stream of bytes for calculating merkle tree
+nodes.</p>
                            </td>
                        </tr>
                        <tr class=' module-item'>
