--- a/merkle_light/hash/trait.Algorithm.html
+++ b/merkle_light/hash/trait.Algorithm.html
@@ -29,7 +29,7 @@
 
     <nav class="sidebar">
         
-        <p class='location'>Trait Algorithm</p><div class="block items"><a class="sidebar-title" href="#required-methods">Required Methods</a><div class="sidebar-links"><a href="#tymethod.write_t">write_t</a><a href="#tymethod.hash">hash</a><a href="#tymethod.reset">reset</a></div><a class="sidebar-title" href="#provided-methods">Provided Methods</a><div class="sidebar-links"><a href="#method.leaf">leaf</a><a href="#method.node">node</a></div><a class="sidebar-title" href="#implementors">Implementors</a></div><p class='location'><a href='../index.html'>merkle_light</a>::<wbr><a href='index.html'>hash</a></p><script>window.sidebarCurrent = {name: 'Algorithm', ty: 'trait', relpath: ''};</script><script defer src="sidebar-items.js"></script>
+        <p class='location'>Trait Algorithm</p><div class="block items"><a class="sidebar-title" href="#required-methods">Required Methods</a><div class="sidebar-links"><a href="#tymethod.hash">hash</a></div><a class="sidebar-title" href="#provided-methods">Provided Methods</a><div class="sidebar-links"><a href="#method.reset">reset</a><a href="#method.leaf">leaf</a><a href="#method.node">node</a></div><a class="sidebar-title" href="#implementors">Implementors</a></div><p class='location'><a href='../index.html'>merkle_light</a>::<wbr><a href='index.html'>hash</a></p><script>window.sidebarCurrent = {name: 'Algorithm', ty: 'trait', relpath: ''};</script><script defer src="sidebar-items.js"></script>
     </nav>
 
     <nav class="sub">
@@ -48,38 +48,32 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a class='srclink' href='../../src/merkle_light/hash.rs.html#115-144' title='goto source code'>[src]</a></span></h1>
-<pre class='rust trait'>pub trait Algorithm&lt;T&gt;: <a class="trait" href="https://doc.rust-lang.org/nightly/core/hash/trait.Hasher.html" title="trait core::hash::Hasher">Hasher</a> <span class="where fmt-newline">where<br>&nbsp;&nbsp;&nbsp;&nbsp;T: <a class="trait" href="https://doc.rust-lang.org/nightly/core/cmp/trait.Ord.html" title="trait core::cmp::Ord">Ord</a> + <a class="trait" href="https://doc.rust-lang.org/nightly/core/clone/trait.Clone.html" title="trait core::clone::Clone">Clone</a> + <a class="trait" href="https://doc.rust-lang.org/nightly/core/default/trait.Default.html" title="trait core::default::Default">Default</a> + <a class="trait" href="https://doc.rust-lang.org/nightly/core/fmt/trait.Debug.html" title="trait core::fmt::Debug">Debug</a>,&nbsp;</span>{
-    fn <a href='#tymethod.write_t' class='fnname'>write_t</a>(&amp;mut self, i: T);
-<div class='item-spacer'></div>    fn <a href='#tymethod.hash' class='fnname'>hash</a>(&amp;mut self) -&gt; T;
-<div class='item-spacer'></div>    fn <a href='#tymethod.reset' class='fnname'>reset</a>(&amp;mut self);
+               </span><a class='srclink' href='../../src/merkle_light/hash.rs.html#110-140' title='goto source code'>[src]</a></span></h1>
+<pre class='rust trait'>pub trait Algorithm&lt;T&gt;: <a class="trait" href="https://doc.rust-lang.org/nightly/core/hash/trait.Hasher.html" title="trait core::hash::Hasher">Hasher</a> + <a class="trait" href="https://doc.rust-lang.org/nightly/core/default/trait.Default.html" title="trait core::default::Default">Default</a> <span class="where fmt-newline">where<br>&nbsp;&nbsp;&nbsp;&nbsp;T: <a class="trait" href="https://doc.rust-lang.org/nightly/core/clone/trait.Clone.html" title="trait core::clone::Clone">Clone</a> + <a class="trait" href="https://doc.rust-lang.org/nightly/core/convert/trait.AsRef.html" title="trait core::convert::AsRef">AsRef</a>&lt;<a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.slice.html">[</a><a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.u8.html">u8</a><a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.slice.html">]</a>&gt;,&nbsp;</span>{
+    fn <a href='#tymethod.hash' class='fnname'>hash</a>(&amp;mut self) -&gt; T;
 
-    fn <a href='#method.leaf' class='fnname'>leaf</a>(&amp;mut self, leaf: T) -&gt; T { ... }
+    fn <a href='#method.reset' class='fnname'>reset</a>(&amp;mut self) { ... }
+<div class='item-spacer'></div>    fn <a href='#method.leaf' class='fnname'>leaf</a>(&amp;mut self, leaf: T) -&gt; T { ... }
 <div class='item-spacer'></div>    fn <a href='#method.node' class='fnname'>node</a>(&amp;mut self, left: T, right: T) -&gt; T { ... }
-}</pre><div class='docblock'><p>Hashing algorithm type.</p>
-
-<p>Algorithm conforms standard [<code>Hasher</code>] trait and provides methods to return
-hash and resetting current state.</p>
+}</pre><div class='docblock'><p>A trait for hashing an arbitrary stream of bytes for calculating merkle tree
+nodes.</p>
 
 <p>T is a hash item must be of known size at compile time, globally ordered, with
 default value as a neutral element of the hash space. Neutral element is
 interpreted as 0 or nil and required for evaluation of merkle tree.</p>
-
-<p>TODO: #[inline]</p>
 </div>
             <h2 id='required-methods' class='small-section-header'>
               Required Methods<a href='#required-methods' class='anchor'></a>
             </h2>
             <div class='methods'>
-        <h3 id='tymethod.write_t' class='method'><span id='write_t.v' class='invisible'><code>fn <a href='#tymethod.write_t' class='fnname'>write_t</a>(&amp;mut self, i: T)</code></span></h3><div class='docblock'><p>Writes a single <code>T</code> into this hasher.</p>
-</div><h3 id='tymethod.hash' class='method'><span id='hash.v' class='invisible'><code>fn <a href='#tymethod.hash' class='fnname'>hash</a>(&amp;mut self) -&gt; T</code></span></h3><div class='docblock'><p>Returns the hash value for the data stream written so far.</p>
-</div><h3 id='tymethod.reset' class='method'><span id='reset.v' class='invisible'><code>fn <a href='#tymethod.reset' class='fnname'>reset</a>(&amp;mut self)</code></span></h3><div class='docblock'><p>Reset Hasher state.</p>
+        <h3 id='tymethod.hash' class='method'><span id='hash.v' class='invisible'><code>fn <a href='#tymethod.hash' class='fnname'>hash</a>(&amp;mut self) -&gt; T</code></span></h3><div class='docblock'><p>Returns the hash value for the data stream written so far.</p>
 </div></div>
             <h2 id='provided-methods' class='small-section-header'>
               Provided Methods<a href='#provided-methods' class='anchor'></a>
             </h2>
             <div class='methods'>
-        <h3 id='method.leaf' class='method'><span id='leaf.v' class='invisible'><code>fn <a href='#method.leaf' class='fnname'>leaf</a>(&amp;mut self, leaf: T) -&gt; T</code></span></h3><div class='docblock'><p>Returns the hash value for MT leaf (prefix 0x00).</p>
+        <h3 id='method.reset' class='method'><span id='reset.v' class='invisible'><code>fn <a href='#method.reset' class='fnname'>reset</a>(&amp;mut self)</code></span></h3><div class='docblock'><p>Reset Hasher state.</p>
+</div><h3 id='method.leaf' class='method'><span id='leaf.v' class='invisible'><code>fn <a href='#method.leaf' class='fnname'>leaf</a>(&amp;mut self, leaf: T) -&gt; T</code></span></h3><div class='docblock'><p>Returns the hash value for MT leaf (prefix 0x00).</p>
 </div><h3 id='method.node' class='method'><span id='node.v' class='invisible'><code>fn <a href='#method.node' class='fnname'>node</a>(&amp;mut self, left: T, right: T) -&gt; T</code></span></h3><div class='docblock'><p>Returns the hash value for MT interior node (prefix 0x01).</p>
 </div></div>
         <h2 id='implementors' class='small-section-header'>
